# prefect-celery-integration

./: pyproject.toml  test.py
src/prefect_celery_integration/: __init__.py  normal_flow.py
